// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResearchEditorOverview > handles empty updates 1`] = `
<div>
  <div
    class="css-p7ooko"
  >
    <h2
      class="css-40p7h6"
    >
      Research overview
    </h2>
    <button
      class="css-1hxh0au"
      data-cy="create-update"
      type="button"
    >
      <span
        class="css-lwcnm9"
      >
        <a
          class="css-1taq3td"
          data-discover="true"
          href="/research/abc/new-update"
        >
          Create update
        </a>
      </span>
    </button>
    <button
      class="css-1g6viq7"
      type="button"
    >
      <span
        class="css-lwcnm9"
      >
        <a
          class="css-1taq3td"
          data-discover="true"
          href="/research/abc/edit"
        >
          Back to research
        </a>
      </span>
    </button>
  </div>
</div>
`;

exports[`ResearchEditorOverview > handles falsey updates 1`] = `
<div>
  <div
    class="css-p7ooko"
  >
    <h2
      class="css-40p7h6"
    >
      Research overview
    </h2>
    <button
      class="css-1hxh0au"
      data-cy="create-update"
      type="button"
    >
      <span
        class="css-lwcnm9"
      >
        <a
          class="css-1taq3td"
          data-discover="true"
          href="/research/abc/new-update"
        >
          Create update
        </a>
      </span>
    </button>
    <button
      class="css-1g6viq7"
      type="button"
    >
      <span
        class="css-lwcnm9"
      >
        <a
          class="css-1taq3td"
          data-discover="true"
          href="/research/abc/edit"
        >
          Back to research
        </a>
      </span>
    </button>
  </div>
</div>
`;

exports[`ResearchEditorOverview > renders correctly 1`] = `
<div>
  <div
    class="css-p7ooko"
  >
    <h2
      class="css-40p7h6"
    >
      Research overview
    </h2>
    <ul
      class="css-nyjgu9"
    >
      <li
        class="css-15o3y0m"
      >
        <span
          class="css-18k9290"
        >
          <strong>
            Update 1
          </strong>
        </span>
      </li>
      <li
        class="css-15o3y0m"
      >
        <span
          class="css-18k9290"
        >
          Update 2
          <a
            class="css-1cgzupl"
            data-discover="true"
            href="/research/abc/edit-update/2"
          >
            Edit
          </a>
        </span>
      </li>
      <li
        class="css-15o3y0m"
      >
        <span
          class="css-18k9290"
        >
          Update 3
          <a
            class="css-1cgzupl"
            data-discover="true"
            href="/research/abc/edit-update/3"
          >
            Edit
          </a>
        </span>
      </li>
    </ul>
    <button
      class="css-1hxh0au"
      data-cy="create-update"
      type="button"
    >
      <span
        class="css-lwcnm9"
      >
        <a
          class="css-1taq3td"
          data-discover="true"
          href="/research/abc/new-update"
        >
          Create update
        </a>
      </span>
    </button>
    <button
      class="css-1g6viq7"
      type="button"
    >
      <span
        class="css-lwcnm9"
      >
        <a
          class="css-1taq3td"
          data-discover="true"
          href="/research/abc/edit"
        >
          Back to research
        </a>
      </span>
    </button>
  </div>
</div>
`;
